

Brushed up the Look and feel Plugin;
  - Updated JGoodies Looks to version 2.5.3
  - Made JGoodies Windows look and feel available (Windows only)
  - Fixed several bugs which makes more Look and feels available
  NOTE: Some Look and Feels may cause performance or even functional problems.
        If you think you are seeing such problems switch to a Metal Look and Feel.


Bug fixes:

When Aliases where tested they occurred multiple times in the recent Aliases list.

Code completion didn't work right when Ctrl+Space was pressed with completion list open.
  The problem occurred when tables and stored procedures names partly matched.

Fixed several java.io.FileNotFoundException that occurred on first application start, i.e. when user dir was newly created.

SQL editor: File Save dialog didn't open in the last used directory.

Look and feel Plugin: Made Alias tree coloring work for FlatLaf Look and Feel.
   Thanks to Stanimir Stamenkov for the patch.

Look and feel Plugin: Fixed java.lang.ClassNotFoundException: net.sourceforge.squirrel_sql.plugins.laf.FlatLafPlaceholder

Merge request #63: Look and Feel Plugin: Using Java 11, choosing a L&F from <userdir>/plugins/laf/extralafs causes
  java.lang.Error: no ComponentUI class for: javax.swing.JLabel[...]
  Thanks to Stanimir Stamenkov for the patch.

#1445 Data import plugin: Import file in UTF-8 BOM format messes up 1st data field.

SQL editor: Search and also the replace windows did not open.

MS Excel export: Fixed error java.lang.ClassNotFoundException: org.dom4j.DocumentException

SQLite database: Sqlite NUMERIC type was rendered as INTEGER.
  Thanks to Alexandru Bledea for merge request #62.

Copying table rows to new window sometimes didn't work because of UI update problems.
  Concerned table's right mouse menu items "Copy selected rows to new window" and "Copy colored rows to new window".

When a SQL result tab was moved to a new window, sums and row/column counts were not available.
