@@ -100,6 +100,8 @@ Brushed up the Look and feel Plugin;
 
 Bug fixes:
 
+Alias import/export: When Aliases were dragged from the import window to an empty Alias tree no Aliases were imported.
+
 When Aliases where tested they occurred multiple times in the recent Aliases list.
 
 Code completion didn't work right when Ctrl+Space was pressed with completion list open.
